--- a/result/form_18.html
+++ b/result/form_18.html
@@ -454,7 +454,7 @@
 		<col width="8"/>
 	</colgroup>
 	<colgroup>
-		<col width="4363"/>
+		<col width="4"/>
 		<col width="1"/>
 	</colgroup>
 	<colgroup>
@@ -469,9 +469,8 @@
 		<td width="27" height="31" style="background: transparent; border: none; padding: 0.06in"><p align="center">
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">স্থানঃ</font></font></font></span></font></p>
 		</td>
-<td colspan="10" width="201" style="background: transparent; border: 1px solid #000000; padding: 0.06in 0.08in"><p>
-			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">রিটার্নিং
-			অফিসারের কার্যালয়</font></font></span></font><font face="Nikosh"><font size="3" style="font-size: 12pt">,
+<td colspan="10" width="201" style="background: transparent; border: 1px solid #000000; padding: 0.06in 0.8in"><p>
+			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">রিটার্নিং অফিসারের কার্যালয়</font></font></span></font><font face="Nikosh"><font size="3" style="font-size: 12pt">,
 			 </font></font><font face=""><span lang="ar-SA"><font face="Nikosh"><font size="3" style="font-size: 12pt">ফেনী।
 			</font></font></span></font></font>
 			</p>
@@ -504,10 +503,8 @@
 			</p>
 		</td>
 		<td width="337" valign="top" style="border-top: 1px solid #000000; border-bottom: none; border-left: none; border-right: none; padding: 0in"><p align="center">
-			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">রিটার্নিং
-			অফিসারের নাম</font></font></span></font><font face="Nikosh"><font size="3" style="font-size: 12pt">,
-			</font></font><font face=""><span lang="ar-SA"><font face="Nikosh"><font size="3" style="font-size: 12pt">পদবী
-			ও স্বাক্ষর</font></font></span></font></font></p>
+			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">রিটার্নিং অফিসারের নাম</font></font></span></font><font face="Nikosh"><font size="3" style="font-size: 12pt">,
+			</font></font><font face=""><span lang="ar-SA"><font face="Nikosh"><font size="3" style="font-size: 12pt">পদবী ও স্বাক্ষর</font></font></span></font></font></p>
 		</td>
 	</tr>
 	<tr>
@@ -515,12 +512,12 @@
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">তারিখঃ</font></font></font></span></font></p>
 		</td>
 		<td width="8" style="background: transparent; border: 1px solid #000000; padding: 0in 0.08in"><p align="center">
-			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">০</font></font></font></span></font></p>
+			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">১</font></font></font></span></font></p>
 		</td>
-		<td width="7" style="background: transparent; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p align="center">
-			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">৭</font></font></font></span></font></p>
+		<td width="8" style="background: transparent; border: 1px solid #000000; padding: 0in 0.08in"><p align="center">
+			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">২</font></font></font></span></font></p>
 		</td>
-		<td width="19" valign="top" style="background: transparent; border: none; padding: 0in"><p>
+		<td width="35" valign="top" style="background: transparent; border: none; padding: 0in"><p>
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">দিন</font></font></font></span></font></p>
 		</td>
 		<td width="8" valign="top" style="background: transparent; border: 1px solid #000000; padding: 0in 0.08in"><p>
@@ -529,7 +526,7 @@
 		<td width="7" valign="top" style="background: transparent; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p>
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">১</font></font></font></span></font></p>
 		</td>
-		<td width="20" valign="top" style="background: transparent; border: none; padding: 0in"><p align="center">
+		<td width="8" valign="top" style="background: transparent; border: none; padding: 0in"><p align="center">
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">মাস</font></font></font></span></font></p>
 		</td>
 		<td width="8" style="background: transparent; border: 1px solid #000000; padding: 0in 0.08in"><p align="center">
@@ -538,11 +535,11 @@
 		<td width="8" style="background: transparent; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p>
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">০</font></font></font></span></font></p>
 		</td>
-		<td colspan="2" width="8" style="background: transparent; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p align="right">
+		<td colspan="2" width="3" style="background: transparent; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p align="center">
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">২</font></font></font></span></font></p>
 		</td>
-		<td width="7" style="background: transparent; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p align="right">
-			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">৪</font></font></font></span></font></p>
+		<td width="7" style="background: transparent; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: 1px solid #000000; padding-top: 0in; padding-bottom: 0in; padding-left: 0in; padding-right: 0.08in"><p align="center">
+			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">৬</font></font></font></span></font></p>
 		</td>
 		<td width="29" valign="bottom" style="background: transparent; border: none; padding: 0in"><p align="center">
 			<font face=""><span lang="ar-SA"><font color="#000000"><font face="Nikosh"><font size="3" style="font-size: 12pt">বৎসর</font></font></font></span></font></p>
