--- a/dashboard.html
+++ b/dashboard.html
@@ -503,7 +503,7 @@
 					</a>
 					<a class="button success" href="generate/3_vote_centre.html" title="Edit Duty List">
 						<span class="icon">✏️</span>
-						<span>2. Edit Duty List</span>
+						<span>2. Edit Appointment Letter</span>
 					</a>
 					<a class="button primary" href="generate/4_duty_finding_mobile.html" title="Duty Finding">
 						<span class="icon">🔎</span>
