--- a/generate/1_apointment_letter.html
+++ b/generate/1_apointment_letter.html
@@ -368,8 +368,8 @@
             </tr>
         </table>
         <div class="justify size-11" style="margin: 10px 0;">
-            গণপ্রতিনিধিত্ব আদেশ, ১৯৭২ এর অনুচ্ছেদ ৯ এর দফা (১খ) এ প্রদত্ত ক্ষমতা বলে আমি <span class="bold">মনিরা
-                হক</span>, <span class="bold">জেলা প্রশাসক</span>, <span class="bold">ফেনী</span>, ২৬৬ ফেনী-২ (ফেনী সদর)
+            গণপ্রতিনিধিত্ব আদেশ, ১৯৭২ এর অনুচ্ছেদ ৯ এর দফা (১খ) এ প্রদত্ত ক্ষমতা বলে আমি <span>মনিরা
+                হক</span>, <span>জেলা প্রশাসক</span>, <span>ফেনী</span>, ২৬৬ ফেনী-২ (ফেনী সদর)
             নির্বাচনি এলাকার রিটার্নিং অফিসার নিম্নবর্ণিত ব্যক্তিগণকে উপরোল্লিখিত ভোটকেন্দ্রে ভোটগ্রহণের জন্য এতদ্বারা
             প্রিজাইডিং অফিসার এবং প্রিজাইডিং অফিসারকে সহায়তা দানের জন্য সহকারী প্রিজাইডিং অফিসার এবং পোলিং অফিসার
             হিসাবে নিয়োগ করিলামঃ
@@ -448,10 +448,10 @@
                 </td>
                 <td valign="top" class="center" style="width: 40%;">
                     <p>(মনিরা হক)</p>
-                    <p class="bold">জেলা প্রশাসক, ফেনী</p>
+                    <p>জেলা প্রশাসক, ফেনী</p>
                     <p>ও</p>
-                    <p class="bold">রিটার্নিং অফিসার</p>
-                    <p class="bold">ত্রয়োদশ জাতীয় সংসদ নির্বাচন-২০২৬</p>
+                    <p>রিটার্নিং অফিসার</p>
+                    <p>ত্রয়োদশ জাতীয় সংসদ নির্বাচন-২০২৬</p>
                     <p>২৬৬ ফেনী-২ (ফেনী সদর)</p>
                 </td>
             </tr>
