--- a/dashboard.html
+++ b/dashboard.html
@@ -570,6 +570,14 @@
 					<div class="section-desc">Election result management </div>
 				</div>
 				<div class="btns">
+					<a class="button success" href="result/candidate_list.html" title="Generate Duty List">
+						<span class="icon">⚡</span>
+						<span>Candidate List</span>
+					</a>
+					<a class="button success" href="result/result_entry.html" title="Generate Duty List">
+						<span class="icon">⚡</span>
+						<span>Result Entry</span>
+					</a>
 					<a class="button success" href="result/form_6.html" title="Generate Duty List">
 						<span class="icon">⚡</span>
 						<span>Form 6</span>
