--- a/4_vote_centre_edit.html
+++ b/4_vote_centre_edit.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Vote Centres - Edit</title>
-  <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23667eea'/><text x='50' y='65' font-size='60' text-anchor='middle' fill='white' font-family='Arial'>U</text></svg>">
+  <link rel="icon" href="/favicon.ico">
   <style>
     * {
       box-sizing: border-box;
