--- a/dashboard.html
+++ b/dashboard.html
@@ -586,7 +586,7 @@
 						<span class="icon">✏️</span>
 						<span>Form 18</span>
 					</a>
-					<a class="button primary" href="result/combine_result.html" title="Duty Finding">
+					<a class="button primary" href="#" title="Duty Finding">
 						<span class="icon">🔎</span>
 						<span>Combine Result</span>	
 					</a>
