--- a/result/result_entry.html
+++ b/result/result_entry.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Nikosh', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: #f4f6f8;
             padding: 20px;
             min-height: 100vh;
@@ -348,9 +348,7 @@
                 <button class="btn btn-primary" onclick="searchResults()">
                     🔍 Search
                 </button>
-                <button class="btn btn-success" onclick="showAddNewForm()">
-                    ➕ New Entry
-                </button>
+                
             </div>
 
             <!-- Table Section -->
